--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,9 +22,7 @@ code {
   align-items: center;
   justify-content: space-between;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  position: fixed;
-  width: 100%;
-  z-index: 1000;
+  margin-bottom: 24px;
 }
 
 .ant-layout-header {
@@ -72,7 +70,10 @@ code {
 }
 
 .ant-layout-content {
-  margin-top: 64px; /* Đảm bảo nội dung không bị Navbar che */
+  margin: 24px 16px;
+  padding: 24px;
+  background: #fff;
+  min-height: 280px;
 }
 
 .fast-rent {
